--- a/.aerospace.toml
+++ b/.aerospace.toml
@@ -1,126 +1,95 @@
-# Place a copy of this config to ~/.aerospace.toml
-# After that, you can edit ~/.aerospace.toml to your liking
-
-# It's not necessary to copy all keys to your config.
-# If the key is missing in your config, "default-config.toml" will serve as a fallback
-
-# You can use it to add commands that run after login to macOS user session.
-# 'start-at-login' needs to be 'true' for 'after-login-command' to work
-# Available commands: https://nikitabobko.github.io/AeroSpace/commands
+# Commands to run after login
 after-login-command = []
 
-# You can use it to add commands that run after AeroSpace startup.
-# 'after-startup-command' is run after 'after-login-command'
-# Available commands : https://nikitabobko.github.io/AeroSpace/commands
-# after-startup-command = ['borders']
+# Commands to run after AeroSpace startup
+after-startup-command = []
 
 # Start AeroSpace at login
 start-at-login = true
 
-# Normalizations. See: https://nikitabobko.github.io/AeroSpace/guide#normalization
+# Enable normalization rules
 enable-normalization-flatten-containers = true
 enable-normalization-opposite-orientation-for-nested-containers = true
 
-# See: https://nikitabobko.github.io/AeroSpace/guide#layouts
-# The 'accordion-padding' specifies the size of accordion padding
-# You can set 0 to disable the padding feature
+# Layout and orientation settings
 accordion-padding = 30
-
-# Possible values: tiles|accordion
 default-root-container-layout = 'tiles'
-
-# Possible values: horizontal|vertical|auto
-# 'auto' means: wide monitor (anything wider than high) gets horizontal orientation,
-#               tall monitor (anything higher than wide) gets vertical orientation
 default-root-container-orientation = 'auto'
 
-# Possible values: (qwerty|dvorak)
-# See https://nikitabobko.github.io/AeroSpace/guide#key-mapping
-key-mapping.preset = 'qwerty'
+# Mouse follows focus on monitor change
+on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
 
-# Gaps between windows (inner-*) and between monitor edges (outer-*).
-# Possible values:
-# - Constant:     gaps.outer.top = 8
-# - Per monitor:  gaps.outer.top = [{ monitor.main = 16 }, { monitor."some-pattern" = 32 }, 24]
-#                 In this example, 24 is a default value when there is no match.
-#                 Monitor pattern is the same as for 'workspace-to-monitor-force-assignment'.
-#                 See: https://nikitabobko.github.io/AeroSpace/guide#assign-workspaces-to-monitors
+on-focus-changed = ['move-mouse monitor-lazy-center']
+
+# This disables macs default keybind for cmd-h and cmd-alt-h, to hide apps that are focused
+# uncommenting this line and line 49 has the same effect
+
+# automatically-unhide-macos-hidden-apps = true
+
+# [exec]                   # Again, you don't need to copy all config sections to your config.
+# inherit-env-vars = true  # If you don't touch "exec" section,
+# [exec.env-vars]          # it will fallback to "default-config.toml"
+# PATH = '/opt/homebrew/bin:/opt/homebrew/sbin:${PATH}'
+
+# Key mapping preset
+[key-mapping]
+preset = 'qwerty'
+
+# Gaps settings
 [gaps]
-inner.horizontal = 8
-inner.vertical =   8
-outer.left =       8
-outer.bottom =     6
-outer.top =        8
-outer.right =      8
+outer.bottom =     [{monitor.'^built-in retina display$' = 10 }, 10]
+outer.top =        [{monitor.'^built-in retina display$' = 10 }, 22]
+outer.left =       13
+outer.right =      13
+inner.horizontal = 10
+inner.vertical =   10
 
-# See https://nikitabobko.github.io/AeroSpace/guide#exec-env-vars
-[exec]                   # Again, you don't need to copy all config sections to your config.
-inherit-env-vars = true  # If you don't touch "exec" section,
-[exec.env-vars]          # it will fallback to "default-config.toml"
-PATH = '/opt/homebrew/bin:/opt/homebrew/sbin:${PATH}'
-
-# 'main' binding mode declaration
-# See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
-# 'main' binding mode must be always presented
+# Binding Modes - Main mode
 [mode.main.binding]
+# cmd-h = [] # Disable "hide application"
+# cmd-alt-h = [] # Disable "hide others"
 
-# All possible keys:
-# - Letters.        a, b, c, ..., z
-# - Numbers.        0, 1, 2, ..., 9
-# - Keypad numbers. keypad0, keypad1, keypad2, ..., keypad9
-# - F-keys.         f1, f2, ..., f20
-# - Special keys.   minus, equal, period, comma, slash, backslash, quote, semicolon, backtick,
-#                   leftSquareBracket, rightSquareBracket, space, enter, esc, backspace, tab
-# - Keypad special. keypadClear, keypadDecimalMark, keypadDivide, keypadEnter, keypadEqual,
-#                   keypadMinus, keypadMultiply, keypadPlus
-# - Arrows.         left, down, up, right
-
-# All possible modifiers: cmd, alt, ctrl, shift
-
-# All possible commands: https://nikitabobko.github.io/AeroSpace/commands
-
-# You can uncomment this line to open up terminal with alt + enter shortcut
-# See: https://nikitabobko.github.io/AeroSpace/commands#exec-and-forget
-# alt-enter = 'exec-and-forget open -n /System/Applications/Utilities/Terminal.app'
-
-# See: https://nikitabobko.github.io/AeroSpace/commands#layout
+# Layout shortcuts
 alt-slash = 'layout tiles horizontal vertical'
 alt-comma = 'layout accordion horizontal vertical'
+# Resets all apps to their dedicated workspaces, configure apps and workspaces inside the script
+alt-r = 'exec-and-forget ~/aerospace.sh reset-workspaces'
+# REPLACE for path to your terminal, MacOS paths are very deceptive, I had to look a lot to find Wezterm :@
+alt-enter = 'exec-and-forget open -n /Applications/Wezterm.app'
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#focus
+# Focus navigation shortcuts
 alt-h = 'focus left'
 alt-j = 'focus down'
 alt-k = 'focus up'
 alt-l = 'focus right'
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#move
+# Move window shortcuts
 alt-shift-h = 'move left'
 alt-shift-j = 'move down'
 alt-shift-k = 'move up'
 alt-shift-l = 'move right'
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#resize
+# Resize window shortcuts
 alt-shift-minus = 'resize smart -50'
 alt-shift-equal = 'resize smart +50'
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#workspace
-alt-1 = 'workspace 1'
-alt-2 = 'workspace 2'
-alt-3 = 'workspace 3'
-alt-4 = 'workspace 4'
-alt-5 = 'workspace 5'
-alt-6 = 'workspace 6'
-alt-7 = 'workspace 7'
-alt-8 = 'workspace 8'
-alt-9 = 'workspace 9'
-alt-a = 'workspace A' # In your config, you can drop workspace bindings that you don't need
-alt-e = 'workspace E'
+alt-1 = 'workspace --auto-back-and-forth 1'
+alt-2 = 'workspace --auto-back-and-forth 2'
+alt-3 = 'workspace --auto-back-and-forth 3'
+alt-4 = 'workspace --auto-back-and-forth 4'
+alt-5 = 'workspace --auto-back-and-forth 5'
+alt-6 = 'workspace --auto-back-and-forth 6'
+alt-7 = 'workspace --auto-back-and-forth 7'
+alt-8 = 'workspace --auto-back-and-forth 8'
+alt-9 = 'workspace --auto-back-and-forth 9'
+alt-a = 'workspace --auto-back-and-forth Browser:Personal' # In your config, you can drop workspace bindings that you don't need
+alt-e = 'workspace --auto-back-and-forth Email'
+alt-w = 'workspace --auto-back-and-forth Browser:Work'
+alt-t = 'workspace --auto-back-and-forth Terminal'
+alt-c = 'workspace --auto-back-and-forth code_editor'
 alt-f = 'fullscreen'
-alt-n = 'workspace N'
-alt-o = 'workspace O'
-alt-r = 'workspace R'
-alt-s = 'workspace S'
-alt-t = 'workspace T'
+alt-n = 'workspace --auto-back-and-forth Notes'
+alt-m = 'workspace --auto-back-and-forth Messaging'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
 alt-shift-1 = 'move-node-to-workspace 1'
@@ -132,37 +101,112 @@ alt-shift-6 = 'move-node-to-workspace 6'
 alt-shift-7 = 'move-node-to-workspace 7'
 alt-shift-8 = 'move-node-to-workspace 8'
 alt-shift-9 = 'move-node-to-workspace 9'
-alt-shift-a = 'move-node-to-workspace A'
-alt-shift-e = 'move-node-to-workspace E'
-alt-shift-i = 'move-node-to-workspace I'
-alt-shift-n = 'move-node-to-workspace N'
-alt-shift-o = 'move-node-to-workspace O'
-alt-shift-r = 'move-node-to-workspace R'
-alt-shift-s = 'move-node-to-workspace S'
-alt-shift-t = 'move-node-to-workspace T'
+alt-shift-a = 'move-node-to-workspace Browser:Personal' # In your config, you can drop workspace bindings that you don't need
+alt-shift-e = 'move-node-to-workspace Email'
+alt-shift-w = 'move-node-to-workspace Browser:Work'
+alt-shift-t = 'move-node-to-workspace Terminal'
+alt-shift-c = 'move-node-to-workspace code_editor'
+alt-shift-n = 'move-node-to-workspace Notes'
+alt-shift-m = 'move-node-to-workspace Messaging'
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
+# Bring forth other workspaces to your current workspace
+ctrl-alt-1 = 'exec-and-forget ~/aerospace.sh bring-workspace 1'
+ctrl-alt-2 = 'exec-and-forget ~/aerospace.sh bring-workspace 2'
+ctrl-alt-3 = 'exec-and-forget ~/aerospace.sh bring-workspace 3'
+ctrl-alt-4 = 'exec-and-forget ~/aerospace.sh bring-workspace 4'
+ctrl-alt-5 = 'exec-and-forget ~/aerospace.sh bring-workspace 5'
+ctrl-alt-6 = 'exec-and-forget ~/aerospace.sh bring-workspace 6'
+ctrl-alt-7 = 'exec-and-forget ~/aerospace.sh bring-workspace 7'
+ctrl-alt-8 = 'exec-and-forget ~/aerospace.sh bring-workspace 8'
+ctrl-alt-9 = 'exec-and-forget ~/aerospace.sh bring-workspace 9'
+ctrl-alt-a = 'exec-and-forget ~/aerospace.sh bring-workspace Browser:Personal' 
+ctrl-alt-e = 'exec-and-forget ~/aerospace.sh bring-workspace Email'
+ctrl-alt-w = 'exec-and-forget ~/aerospace.sh bring-workspace Browser:Work'
+ctrl-alt-t = 'exec-and-forget ~/aerospace.sh bring-workspace Terminal'
+ctrl-alt-c = 'exec-and-forget ~/aerospace.sh bring-workspace code_editor'
+ctrl-alt-n = 'exec-and-forget ~/aerospace.sh bring-workspace Notes'
+ctrl-alt-m = 'exec-and-forget ~/aerospace.sh bring-workspace Messaging'
+
+# go back to prev workspace
 alt-tab = 'workspace-back-and-forth'
-# See: https://nikitabobko.github.io/AeroSpace/commands#move-workspace-to-monitor
+# send workspace to monitor
 alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 
-# See: https://nikitabobko.github.io/AeroSpace/commands#mode
+# Special mode: Service(this name can be anything like Dog, Cat), press this keybind to go into the mode defined below
 alt-shift-semicolon = 'mode service'
 
-# 'service' binding mode declaration.
-# See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
+# Service mode bindings
 [mode.service.binding]
+# reload config and go to main mode
 esc = ['reload-config', 'mode main']
-r = ['flatten-workspace-tree', 'mode main'] # reset layout
-#s = ['layout sticky tiling', 'mode main'] # sticky is not yet supported https://github.com/nikitabobko/AeroSpace/issues/2
-f = ['layout floating tiling', 'mode main'] # Toggle between floating and tiling layout
+r = ['flatten-workspace-tree', 'mode main']
+f = ['layout floating tiling', 'mode main']
 backspace = ['close-all-windows-but-current', 'mode main']
 
-alt-shift-h = ['join-with left', 'mode main']
-alt-shift-j = ['join-with down', 'mode main']
-alt-shift-k = ['join-with up', 'mode main']
-alt-shift-l = ['join-with right', 'mode main']
+# Application assignments to workspaces
 
-# [[on-window-detected]]
-# if.app-id = 'com.apple.systempreferences'
-# run = ['layout floating', 'move-node-to-workspace S']  # The callback itself
+[[on-window-detected]]
+if.app-id = 'com.microsoft.VSCode'
+run = ['move-node-to-workspace code_editor']
+
+[[on-window-detected]]
+if.workspace = '6'
+check-further-callbacks = true
+run = ['layout floating']
+
+[[on-window-detected]]
+if.app-id = 'company.thebrowser.Browser'
+run = ['layout tiling', 'move-node-to-workspace Browser:Personal']
+
+[[on-window-detected]]
+if.app-id = 'com.github.wez.wezterm'
+run = ['layout tiling', 'move-node-to-workspace Terminal']
+[[on-window-detected]]
+if.app-id = 'md.obsidian'
+run = ['layout tiling', 'move-node-to-workspace Notes']
+
+[[on-window-detected]]
+if.app-id = 'com.apple.finder'
+run = ['layout floating']
+
+[[on-window-detected]]
+if.app-id = 'com.apple.systempreferences'
+run = ['layout floating']
+
+[[on-window-detected]]
+if.app-id = 'com.microsoft.teams2'              
+run = ['move-node-to-workspace Messaging']  
+
+[[on-window-detected]]
+if.app-id = 'com.microsoft.Outlook'              
+run = ['move-node-to-workspace Email']  
+
+
+[[on-window-detected]]
+if.app-id = 'com.microsoft.edgemac'              
+run = ['move-node-to-workspace Browser:Work']  
+
+[[on-window-detected]]
+check-further-callbacks = true
+run = ['layout floating', 'move-node-to-workspace 6'] 
+
+# Uncomment these lines if you use a monitor, then if you're in a monitor you can grab workspaces in other monitors to
+# your current focused monitor
+
+# shift-ctrl-alt-1 = 'exec-and-forget ~/aerospace.sh bring-workspace 1'
+# shift-ctrl-alt-2 = 'exec-and-forget ~/aerospace.sh bring-workspace 2'
+# shift-ctrl-alt-3 = 'exec-and-forget ~/aerospace.sh bring-workspace 3'
+# shift-ctrl-alt-4 = 'exec-and-forget ~/aerospace.sh bring-workspace 4'
+# shift-ctrl-alt-5 = 'exec-and-forget ~/aerospace.sh bring-workspace 5'
+# shift-ctrl-alt-6 = 'exec-and-forget ~/aerospace.sh bring-workspace 6'
+# shift-ctrl-alt-7 = 'exec-and-forget ~/aerospace.sh bring-workspace 7'
+# shift-ctrl-alt-8 = 'exec-and-forget ~/aerospace.sh bring-workspace 8'
+# shift-ctrl-alt-9 = 'exec-and-forget ~/aerospace.sh bring-workspace 9'
+# shift-ctrl-alt-a = 'exec-and-forget ~/aerospace.sh bring-workspace Browser:Personal' 
+# shift-ctrl-alt-e = 'exec-and-forget ~/aerospace.sh bring-workspace Email'
+# shift-ctrl-alt-w = 'exec-and-forget ~/aerospace.sh bring-workspace Browser:Work'
+# shift-ctrl-alt-t = 'exec-and-forget ~/aerospace.sh bring-workspace Terminal'
+# shift-ctrl-alt-c = 'exec-and-forget ~/aerospace.sh bring-workspace code_editor'
+# shift-ctrl-alt-n = 'exec-and-forget ~/aerospace.sh bring-workspace Notes'
+# shift-ctrl-alt-m = 'exec-and-forget ~/aerospace.sh bring-workspace Messaging'
+
