--- a/.aerospace.toml
+++ b/.aerospace.toml
@@ -193,20 +193,20 @@ run = ['layout floating', 'move-node-to-workspace 6']
 # Uncomment these lines if you use a monitor, then if you're in a monitor you can grab workspaces in other monitors to
 # your current focused monitor
 
-# shift-ctrl-alt-1 = 'exec-and-forget ~/aerospace.sh bring-workspace 1'
-# shift-ctrl-alt-2 = 'exec-and-forget ~/aerospace.sh bring-workspace 2'
-# shift-ctrl-alt-3 = 'exec-and-forget ~/aerospace.sh bring-workspace 3'
-# shift-ctrl-alt-4 = 'exec-and-forget ~/aerospace.sh bring-workspace 4'
-# shift-ctrl-alt-5 = 'exec-and-forget ~/aerospace.sh bring-workspace 5'
-# shift-ctrl-alt-6 = 'exec-and-forget ~/aerospace.sh bring-workspace 6'
-# shift-ctrl-alt-7 = 'exec-and-forget ~/aerospace.sh bring-workspace 7'
-# shift-ctrl-alt-8 = 'exec-and-forget ~/aerospace.sh bring-workspace 8'
-# shift-ctrl-alt-9 = 'exec-and-forget ~/aerospace.sh bring-workspace 9'
-# shift-ctrl-alt-a = 'exec-and-forget ~/aerospace.sh bring-workspace Browser:Personal' 
-# shift-ctrl-alt-e = 'exec-and-forget ~/aerospace.sh bring-workspace Email'
-# shift-ctrl-alt-w = 'exec-and-forget ~/aerospace.sh bring-workspace Browser:Work'
-# shift-ctrl-alt-t = 'exec-and-forget ~/aerospace.sh bring-workspace Terminal'
-# shift-ctrl-alt-c = 'exec-and-forget ~/aerospace.sh bring-workspace code_editor'
-# shift-ctrl-alt-n = 'exec-and-forget ~/aerospace.sh bring-workspace Notes'
-# shift-ctrl-alt-m = 'exec-and-forget ~/aerospace.sh bring-workspace Messaging'
+# shift-ctrl-alt-1 = 'summon-workspace 1'
+# shift-ctrl-alt-2 = 'summon-workspace 2'
+# shift-ctrl-alt-3 = 'summon-workspace 3'
+# shift-ctrl-alt-4 = 'summon-workspace 4'
+# shift-ctrl-alt-5 = 'summon-workspace 5'
+# shift-ctrl-alt-6 = 'summon-workspace 6'
+# shift-ctrl-alt-7 = 'summon-workspace 7'
+# shift-ctrl-alt-8 = 'summon-workspace 8'
+# shift-ctrl-alt-9 = 'summon-workspace 9'
+# shift-ctrl-alt-a = 'summon-workspace Browser:Personal' 
+# shift-ctrl-alt-e = 'summon-workspace Email'
+# shift-ctrl-alt-w = 'summon-workspace Browser:Work'
+# shift-ctrl-alt-t = 'summon-workspace Terminal'
+# shift-ctrl-alt-c = 'summon-workspace code_editor'
+# shift-ctrl-alt-n = 'summon-workspace Notes'
+# shift-ctrl-alt-m = 'summon-workspace Messaging'
 
